--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,16 @@
-
-b{
-    color :rgb(136, 12, 167);
-}
+        /* Spinner styles */
+        .spinner {
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            border: 4px solid rgba(0, 0, 0, 0.1);
+            border-left-color: blue;
+            border-right-color: blue;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+        
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
