--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,19 @@
         /* Spinner styles */
         .spinner {
             display: inline-block;
-            width: 24px;
-            height: 24px;
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            border-left-color: blue;
-            border-right-color: blue;
+            width: 18px;
+            height: 18px;
+            border: 2px solid rgba(0, 0, 0, 0.1);
+            border-left-color: rgb(136,12,167);
+            border-right-color: rgb(136,12,167);
             border-radius: 50%;
             animation: spin 1s linear infinite;
         }
         
         @keyframes spin {
             0% { transform: rotate(0deg); }
+            25% {transform: rotate(90deg);}
+            50% {transform: rotate(180deg);}
+            75% {transform: rotate(270deg);}
             100% { transform: rotate(360deg); }
         }
