--- a/styles/style.css
+++ b/styles/style.css
@@ -17,3 +17,8 @@
             75% {transform: rotate(270deg);}
             100% { transform: rotate(360deg); }
         }
+
+
+h{
+    color: #8a517f36;
+}
